# HFT_PYNQZ1-Z2

./: README.md  TEMPORARY_converters.tcl  design_1_wrapper_v6.bit  design_1_wrapper_v6.xsa  fix_build.tcl  output.txt  pynq_block_design.tcl  pynq_z1.xdc  rebuild_hft_complete_fixed_v6.bat  rebuild_hft_complete_fixed_v6.tcl  run_util_report.tcl  vivado.jou  vivado_14096.backup.jou  vivado_20992.backup.jou  vivado_22216.backup.jou  vivado_25228.backup.jou  vivado_8476.backup.jou
scripts/: !PYNQ.md  STEP2testSystem.py  STEP3testSystem.py  createTestVectors.py  dynamic_table.py  find_bitstream.py  generatePackets.py  hft_trading_engine.py  live_hft_trading_demo.py  manualPacketTest.py  simple_trading_demo_fixed.py  testSystem.py  testSystemCPU.py  test_dma_reset_corrected.py  test_hft_send_only_final.py  test_hft_v6_final_working.py  test_hft_v6_optimized.py  test_hft_v6_overlay.py  test_hft_v6_safe.py  test_safe_v6_overlay.py  test_send_only_working.py
src/: block_design.tcl  build_fast_core.tcl  build_fast_core_fixed.tcl  build_microblaze_to_switch_core.tcl  build_order_book_core.tcl  build_project.tcl  build_threshold_core.tcl  check_interfaces.tcl  cmplx.5.0.fe.end.json  hft_pipeline.xsa  hs_err_pid10320.dmp  hs_err_pid11740.dmp  hs_err_pid11904.dmp  hs_err_pid18520.dmp  hs_err_pid18840.dmp  hs_err_pid18864.dmp  hs_err_pid19644.dmp  hs_err_pid19720.dmp  hs_err_pid19776.dmp  hs_err_pid20328.dmp  hs_err_pid21976.dmp  hs_err_pid23020.dmp  (+27 more)
src/hft_proj/hft_proj.ip_user_files/sim_scripts/design_1/riviera/: CMakeLists.txt  README.txt  compile.do  design_1.sh  file_info.txt
(+1951 files in other folders)
